Titanic Survivor: improve model

--- a/titanic-survivor/predictor.ipynb
+++ b/titanic-survivor/predictor.ipynb
@@ -13,25 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def attributes_to_features(data):\n",
-    "    return pd.get_dummies(data[[\"Sex\", \"Pclass\"]])"
+    "import pandas as pd"
    ]
   },
   {
@@ -61,14 +49,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "features = attributes_to_features(data)"
+    "def delete_digit(string):\n",
+    "    if string.__class__ != str:\n",
+    "        return \"\"\n",
+    "    else:\n",
+    "        return string[0]\n",
+    "\n",
+    "data[\"Cabin\"] = data[\"Cabin\"].apply(delete_digit)\n",
+    "\n",
+    "features = pd.get_dummies(data[[\"Sex\", \"Pclass\", \"Cabin\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data[\"Embarked\"]"
    ]
   },
   {
@@ -90,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -109,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -130,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -148,16 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.76865671641791045"
+       "0.77238805970149249"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,16 +182,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.71559633027522918"
+       "0.72398190045248867"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,17 +203,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[128,  24],\n",
-       "       [ 38,  78]])"
+       "array([[127,  25],\n",
+       "       [ 36,  80]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +233,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_out = pd.read_csv(\"./test.csv\")\n",
