--- a/california-house-prices/predictions.ipynb
+++ b/california-house-prices/predictions.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from utils import DataFrameSelector, CategoricalEncoder\n",
@@ -363,51 +365,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Predicting & evaluating"
+    "# 4. Creating model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/site-packages/scipy/linalg/basic.py:1018: RuntimeWarning: internal gelsd driver lwork query error, required iwork dimension not returned. This is likely the result of LAPACK bug 0038, fixed in LAPACK 3.2.2 (released July 21, 2010). Falling back to 'gelss' driver.\n",
-      "  warnings.warn(mesg, RuntimeWarning)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "73331.194149082468"
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features='auto', max_leaf_nodes=None,\n",
+       "           min_impurity_split=1e-07, min_samples_leaf=1,\n",
+       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "           n_estimators=10, n_jobs=1, oob_score=False, random_state=None,\n",
+       "           verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "lin_reg = LinearRegression()\n",
-    "lin_reg.fit(X_train, y_train)\n",
-    "\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "y_pred = lin_reg.predict(X_test)\n",
-    "lin_mse = mean_squared_error(y_test, y_pred)\n",
-    "lin_rmse = np.sqrt(lin_mse)\n",
-    "lin_rmse"
+    "forest_reg = RandomForestRegressor()\n",
+    "forest_reg.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A RMSE of 73 331 USD is not so good when compared to the mean (206 855 USD) and std (115 395) of the values."
+    "# 5. Evaluating model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "53435.354424503617"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "y_pred = forest_reg.predict(X_test)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(lin_mse)\n",
+    "rmse"
    ]
   }
  ],
