--- a/california-house-prices/predictions.ipynb
+++ b/california-house-prices/predictions.ipynb
@@ -400,31 +400,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Evaluating model"
+    "# 5. Fine tuning model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "53435.354424503617"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(63112.899747570802, 11371.451300675057, {'max_features': 2, 'n_estimators': 3})\n",
+      "(55816.275560515853, 9934.7916643230001, {'max_features': 2, 'n_estimators': 10})\n",
+      "(52856.474970041723, 8698.2122478551009, {'max_features': 2, 'n_estimators': 30})\n",
+      "(61745.880679843074, 9307.7706895185183, {'max_features': 3, 'n_estimators': 3})\n",
+      "(54341.383728096909, 9217.7861967494755, {'max_features': 3, 'n_estimators': 10})\n",
+      "(52079.555764536228, 7734.0236170931503, {'max_features': 3, 'n_estimators': 30})\n",
+      "(60541.965821743579, 11297.887434091164, {'max_features': 6, 'n_estimators': 3})\n",
+      "(52966.223340123201, 7927.3963767548075, {'max_features': 6, 'n_estimators': 10})\n",
+      "(51056.497175355253, 4087.7113197090707, {'max_features': 6, 'n_estimators': 30})\n",
+      "(59857.531347716453, 11649.640309935896, {'max_features': 8, 'n_estimators': 3})\n",
+      "(52227.789787665992, 11522.216743466393, {'max_features': 8, 'n_estimators': 10})\n",
+      "(50651.127884446243, 6636.9891609611641, {'max_features': 8, 'n_estimators': 30})\n",
+      "(61997.681881928293, 10633.199905948901, {'max_features': 2, 'n_estimators': 3, 'bootstrap': False})\n",
+      "(53755.03950311392, 9203.6691268386639, {'max_features': 2, 'n_estimators': 10, 'bootstrap': False})\n",
+      "(60465.063805263875, 10668.708763046585, {'max_features': 3, 'n_estimators': 3, 'bootstrap': False})\n",
+      "(53380.553120955919, 11573.56751342502, {'max_features': 3, 'n_estimators': 10, 'bootstrap': False})\n",
+      "(59089.701047444803, 12320.577076959204, {'max_features': 4, 'n_estimators': 3, 'bootstrap': False})\n",
+      "(52368.739044915004, 7907.5726927571041, {'max_features': 4, 'n_estimators': 10, 'bootstrap': False})\n"
+     ]
     }
    ],
    "source": [
-    "from sklearn.metrics import mean_squared_error\n",
-    "y_pred = forest_reg.predict(X_test)\n",
-    "mse = mean_squared_error(y_test, y_pred)\n",
-    "rmse = np.sqrt(lin_mse)\n",
-    "rmse"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "params_grid = [\n",
+    "    {'n_estimators': [3, 10, 30], 'max_features': [2,3,6,8]},\n",
+    "    {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2,3,4]},\n",
+    "]\n",
+    "\n",
+    "grid_search = GridSearchCV(forest_reg, params_grid, cv=5, scoring='neg_mean_squared_error')\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Display the results of the GridSearch\n",
+    "cvres = grid_search.cv_results_\n",
+    "for mean_score, std_score, params in zip(cvres['mean_test_score'], cvres['std_test_score'], cvres['params']):\n",
+    "    print(np.sqrt(-mean_score), np.sqrt(std_score), params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forest_reg = grid_search.best_estimator_"
    ]
   }
  ],
