--- a/california-house-prices/predictions.ipynb
+++ b/california-house-prices/predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "4            342200.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -370,30 +370,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
-       "           max_features='auto', max_leaf_nodes=None,\n",
-       "           min_impurity_split=1e-07, min_samples_leaf=1,\n",
-       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-       "           n_estimators=10, n_jobs=1, oob_score=False, random_state=None,\n",
-       "           verbose=0, warm_start=False)"
+       "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='auto',\n",
+       "  kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "\n",
-    "forest_reg = RandomForestRegressor()\n",
-    "forest_reg.fit(X_train, y_train)"
+    "# from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "sv_reg = SVR(kernel='rbf')\n",
+    "sv_reg.fit(X_train, y_train)"
    ]
   },
   {
@@ -405,42 +401,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(63112.899747570802, 11371.451300675057, {'max_features': 2, 'n_estimators': 3})\n",
-      "(55816.275560515853, 9934.7916643230001, {'max_features': 2, 'n_estimators': 10})\n",
-      "(52856.474970041723, 8698.2122478551009, {'max_features': 2, 'n_estimators': 30})\n",
-      "(61745.880679843074, 9307.7706895185183, {'max_features': 3, 'n_estimators': 3})\n",
-      "(54341.383728096909, 9217.7861967494755, {'max_features': 3, 'n_estimators': 10})\n",
-      "(52079.555764536228, 7734.0236170931503, {'max_features': 3, 'n_estimators': 30})\n",
-      "(60541.965821743579, 11297.887434091164, {'max_features': 6, 'n_estimators': 3})\n",
-      "(52966.223340123201, 7927.3963767548075, {'max_features': 6, 'n_estimators': 10})\n",
-      "(51056.497175355253, 4087.7113197090707, {'max_features': 6, 'n_estimators': 30})\n",
-      "(59857.531347716453, 11649.640309935896, {'max_features': 8, 'n_estimators': 3})\n",
-      "(52227.789787665992, 11522.216743466393, {'max_features': 8, 'n_estimators': 10})\n",
-      "(50651.127884446243, 6636.9891609611641, {'max_features': 8, 'n_estimators': 30})\n",
-      "(61997.681881928293, 10633.199905948901, {'max_features': 2, 'n_estimators': 3, 'bootstrap': False})\n",
-      "(53755.03950311392, 9203.6691268386639, {'max_features': 2, 'n_estimators': 10, 'bootstrap': False})\n",
-      "(60465.063805263875, 10668.708763046585, {'max_features': 3, 'n_estimators': 3, 'bootstrap': False})\n",
-      "(53380.553120955919, 11573.56751342502, {'max_features': 3, 'n_estimators': 10, 'bootstrap': False})\n",
-      "(59089.701047444803, 12320.577076959204, {'max_features': 4, 'n_estimators': 3, 'bootstrap': False})\n",
-      "(52368.739044915004, 7907.5726927571041, {'max_features': 4, 'n_estimators': 10, 'bootstrap': False})\n"
+      "(108688.48716062205, 18307.87453444425, {'kernel': 'linear'})\n",
+      "(118991.33435320934, 17988.95385029637, {'kernel': 'poly'})\n",
+      "(118382.61552416766, 19517.527298322118, {'kernel': 'rbf'})\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "params_grid = [\n",
-    "    {'n_estimators': [3, 10, 30], 'max_features': [2,3,6,8]},\n",
-    "    {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2,3,4]},\n",
+    "    {'kernel': ['linear', 'poly', 'rbf']}\n",
     "]\n",
     "\n",
-    "grid_search = GridSearchCV(forest_reg, params_grid, cv=5, scoring='neg_mean_squared_error')\n",
+    "grid_search = GridSearchCV(sv_reg, params_grid, cv=5, scoring='neg_mean_squared_error')\n",
     "grid_search.fit(X_train, y_train)\n",
     "\n",
     "# Display the results of the GridSearch\n",
@@ -451,12 +431,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": [
-    "forest_reg = grid_search.best_estimator_"
-   ]
+   "source": []
   }
  ],
  "metadata": {
