MNIST: Add KNeighborsClassifier model
It's very slow but it provides very good accuracy.

--- a/mnist-handwritten-digit/3-mutli-classes-classification.ipynb
+++ b/mnist-handwritten-digit/3-mutli-classes-classification.ipynb
@@ -66,12 +66,27 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SGDClassifier(alpha=0.0001, average=False, class_weight=None, epsilon=0.1,\n",
+       "       eta0=0.0, fit_intercept=True, l1_ratio=0.15,\n",
+       "       learning_rate='optimal', loss='hinge', n_iter=5, n_jobs=1,\n",
+       "       penalty='l2', power_t=0.5, random_state=42, shuffle=True, verbose=0,\n",
+       "       warm_start=False)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.linear_model import SGDClassifier\n",
     "\n",
-    "# sgd_clf = SGDClassifier(random_state=42)\n",
-    "# sgd_clf.fit(X_train, y_train)"
+    "sgd_clf = SGDClassifier(random_state=42)\n",
+    "sgd_clf.fit(X_train, y_train)"
    ]
   },
   {
@@ -83,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -93,7 +108,42 @@
     "from sklearn.model_selection import cross_val_predict\n",
     "\n",
     "forest_clf = RandomForestClassifier(random_state=42)\n",
-    "y_probas_forest = cross_val_predict(forest_clf, X_train, y_train, cv=3, method=\"predict_proba\")"
+    "# y_probas_forest = cross_val_predict(forest_clf, X_train, y_train, cv=3, method=\"predict_proba\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.3 K Nearest Neighbors Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "           metric_params=None, n_jobs=1, n_neighbors=5, p=2,\n",
+       "           weights='uniform')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import cross_val_predict, KFold\n",
+    "\n",
+    "knn_clf = KNeighborsClassifier()\n",
+    "knn_clf.fit(X_train, y_train)\n",
+    "# kfold = KFold(n_splits=3, random_state=42)\n",
+    "# y_probas_knn = cross_val_predict(knn_clf, X_train, y_train, cv=3) # method=\"predict_proba\"\n"
    ]
   },
   {
@@ -107,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -116,14 +166,37 @@
        "array([ 0.94041192,  0.93879694,  0.93949092])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
+    "\n",
     "cross_val_score(forest_clf, X_train, y_train, cv=3, scoring=\"accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.96790642,  0.96924846,  0.96879532])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "cross_val_score(knn_clf, X_train, y_train, cv=3, scoring=\"accuracy\", n_jobs=-1)"
    ]
   },
   {
