Spam - Addoption to lowercase or not
So we can after evaluate both options.

What we have in the pipeline:
  - Vectorize an email
  - Concatenate X and y resp. vectorized email and spam
  - Downcase vectorized enail

  Things to implement:
    - Delete email header
    - Delete punctation?
    - Replace urls by URL
    - Replace number by NUMBER
    - Use stemming
    - Evaluate other scikit options of CounterVectorizer?

--- a/spam-classifier/spam_classifier.ipynb
+++ b/spam-classifier/spam_classifier.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,8 +65,8 @@
     "\n",
     "# Transformation 1 - vectorize\n",
     "class Vectorizor(BaseEstimator, TransformerMixin):\n",
-    "    def __init__(self):\n",
-    "        self.vectorizor = CountVectorizer()\n",
+    "    def __init__(self, lowercase):\n",
+    "        self.vectorizor = CountVectorizer(lowercase=lowercase)\n",
     "\n",
     "    def fit(self, X, y=None):\n",
     "        self.vectorizor.fit(X)\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -101,17 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Transformation pipeline\n",
     "from sklearn.pipeline import Pipeline\n",
     "\n",
+    "lowercase = True\n",
     "pipeline = Pipeline([\n",
-    "        ('vectorizer', Vectorizor()),\n",
+    "        ('vectorizer', Vectorizor(lowercase=lowercase)),\n",
     "        # ('concat_xy', XYConcatenator())\n",
     "    ])\n",
     "\n",
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +148,7 @@
        "       tol=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,15 +169,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/geoffroy.gobert/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
-      "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n",
       "/Users/geoffroy.gobert/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
       "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n",
       "/Users/geoffroy.gobert/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
@@ -197,6 +194,14 @@
       "97.2172071859\n",
       "1.00928764852\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/geoffroy.gobert/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
+      "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n"
+     ]
     }
    ],
    "source": [
@@ -205,19 +210,6 @@
     "print(scores)\n",
     "print(scores.mean() * 100)\n",
     "print(scores.std() * 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# [ 0.98275862  0.95689655  0.9826087   0.96491228  0.97368421]\n",
-    "# 97.2172071859\n",
-    "# 1.00928764852"
    ]
   }
  ],
