Spam - Add option to delete email header
So we can after evaluate if it worth it or not.

What we have in the pipeline:
  - Vectorize an email
  - Concatenate X and y resp. vectorized email and spam
  - Downcase vectorized enail
  - Delete email header

  Things to implement:
    - Delete punctation?
    - Replace urls by URL
    - Replace number by NUMBER
    - Use stemming
    - Evaluate other scikit options of CounterVectorizer?

--- a/spam-classifier/spam_classifier.ipynb
+++ b/spam-classifier/spam_classifier.ipynb
@@ -36,13 +36,13 @@
     "\n",
     "for f in ham_files:\n",
     "    with open(\"data/train/ham/\" + f, 'r', encoding='latin1') as myfile:\n",
-    "        content = myfile.read().replace('\\n', '')\n",
+    "        content = myfile.read()\n",
     "        corpus.append(content)\n",
     "        spam.append(0)\n",
     "        \n",
     "for f in spam_files:\n",
     "    with open(\"data/train/spam/\" + f, 'r', encoding='latin1') as myfile:\n",
-    "        content = myfile.read().replace('\\n', '')\n",
+    "        content = myfile.read()\n",
     "        corpus.append(content)\n",
     "        spam.append(1)"
    ]
@@ -56,14 +56,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
-    "# Transformation 1 - vectorize\n",
+    "# Transformation 1 - Delete Email header\n",
+    "class HeaderDeletor(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, delete_header):\n",
+    "        self.delete_header = delete_header\n",
+    "\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    \n",
+    "    def transform(self, X, y=None):\n",
+    "        if self.delete_header:\n",
+    "            def delete_header(x):\n",
+    "                try:\n",
+    "                    return x.split(\"\\n\\n\")[1]\n",
+    "                except IndexError: # ValueError\n",
+    "                    return \"\"\n",
+    "                \n",
+    "            return list(map(delete_header, X))\n",
+    "        else:\n",
+    "            return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "# Transformation 2 - vectorize\n",
     "class Vectorizor(BaseEstimator, TransformerMixin):\n",
     "    def __init__(self, lowercase):\n",
     "        self.vectorizor = CountVectorizer(lowercase=lowercase)\n",
@@ -78,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -89,7 +123,7 @@
     "\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "\n",
-    "# Transformation 2 - X + y\n",
+    "# Transformation 3 - X + y\n",
     "class XYConcatenator(BaseEstimator, TransformerMixin):\n",
     "    def fit(self, X, y=None):\n",
     "        return self  # nothing else to do\n",
@@ -102,14 +136,20 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Transformation pipeline\n",
     "from sklearn.pipeline import Pipeline\n",
     "\n",
     "lowercase = True\n",
+    "delete_header = False\n",
+    "\n",
     "pipeline = Pipeline([\n",
+    "    \n",
+    "        ('header_deletor', HeaderDeletor(delete_header=delete_header)),\n",
     "        ('vectorizer', Vectorizor(lowercase=lowercase)),\n",
     "        # ('concat_xy', XYConcatenator())\n",
     "    ])\n",
@@ -183,6 +223,8 @@
       "/Users/geoffroy.gobert/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
       "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n",
       "/Users/geoffroy.gobert/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
+      "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n",
+      "/Users/geoffroy.gobert/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
       "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n"
      ]
     },
@@ -190,23 +232,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.98275862  0.95689655  0.9826087   0.96491228  0.97368421]\n",
-      "97.2172071859\n",
-      "1.00928764852\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/geoffroy.gobert/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
-      "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n"
+      "[ 0.90517241  0.87931034  0.89565217  0.9122807   0.89473684]\n",
+      "89.7430495279\n",
+      "1.11285576902\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "scores = cross_val_score(sgd_clf, X, y, cv=5, scoring=\"accuracy\")\n",
+    "\n",
     "print(scores)\n",
     "print(scores.mean() * 100)\n",
     "print(scores.std() * 100)"
