Spam - Add option to replace urls by URL
So we can after evaluate if it worth it or not.

What we have in the pipeline:
  - Vectorize an email
  - Concatenate X and y resp. vectorized email and spam
  - Downcase vectorized enail
  - Delete email header
  - Delete punctation? (automatically done by CounterVectorizer)
  - Replace urls by URL

  Things to implement:
    - Replace number by NUMBER
    - Use stemming
    - Evaluate other scikit options of CounterVectorizer?

--- a/spam-classifier/spam_classifier.ipynb
+++ b/spam-classifier/spam_classifier.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -88,7 +88,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "# Transformation 1.2 - Delete replace urls by URL\n",
+    "class UrlsDeletor(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, skip=False):\n",
+    "        self.skip = skip\n",
+    "\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    \n",
+    "    def transform(self, X, y=None):\n",
+    "        if self.skip:\n",
+    "            return X\n",
+    "        else:\n",
+    "            def replace_urls(x):\n",
+    "                return re.sub(r'http\\S+', 'URL', x)\n",
+    "            return list(map(replace_urls, X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +129,7 @@
     "# Transformation 2 - vectorize\n",
     "class Vectorizor(BaseEstimator, TransformerMixin):\n",
     "    def __init__(self, lowercase):\n",
-    "        self.vectorizor = CountVectorizer(lowercase=lowercase)\n",
+    "            self.vectorizor = CountVectorizer(lowercase=lowercase)\n",
     "\n",
     "    def fit(self, X, y=None):\n",
     "        self.vectorizor.fit(X)\n",
@@ -112,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -135,21 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Transformation pipeline\n",
     "from sklearn.pipeline import Pipeline\n",
     "\n",
     "lowercase = True\n",
-    "delete_header = False\n",
+    "delete_header = True\n",
+    "skip_url = False\n",
     "\n",
     "pipeline = Pipeline([\n",
-    "    \n",
     "        ('header_deletor', HeaderDeletor(delete_header=delete_header)),\n",
+    "        ('url_deletor', UrlsDeletor(skip=skip_url)),\n",
     "        ('vectorizer', Vectorizor(lowercase=lowercase)),\n",
     "        # ('concat_xy', XYConcatenator())\n",
     "    ])\n",
@@ -167,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +216,7 @@
        "       tol=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -232,9 +260,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.90517241  0.87931034  0.89565217  0.9122807   0.89473684]\n",
-      "89.7430495279\n",
-      "1.11285576902\n"
+      "[ 0.9137931   0.90517241  0.90434783  0.92105263  0.89473684]\n",
+      "90.7820563403\n",
+      "0.895561529572\n"
      ]
     }
    ],
