Spam - Add option to replace numbers by NUMBER
So we can after evaluate if it worth it or not.

What we have in the pipeline:
 - Vectorize an email
 - Concatenate X and y resp. vectorized email and spam
 - Downcase vectorized enail
 - Delete email header
 - Delete punctation? (automatically done by CounterVectorizer)
 - Replace urls by URL
 - Replace numbers by NUMBER

 Things to implement:
   - Use stemming
   - Evaluate other scikit options of CounterVectorizer?

--- a/spam-classifier/spam_classifier.ipynb
+++ b/spam-classifier/spam_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -117,7 +117,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re, string\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "# Transformation 1.3 - Replace numbers by NUMBER\n",
+    "class NumberDeletor(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, skip=False):\n",
+    "        self.skip = skip\n",
+    "\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    \n",
+    "    def transform(self, X, y=None):\n",
+    "        if self.skip:\n",
+    "            return X\n",
+    "\n",
+    "        def clearup(s):\n",
+    "            return re.sub(r'[0-9]+', 'NUMBER', s)\n",
+    "        \n",
+    "        return list(map(clearup, X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -141,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -164,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,11 +201,13 @@
     "\n",
     "lowercase = True\n",
     "delete_header = True\n",
-    "skip_url = False\n",
+    "skip_url = True\n",
+    "skip_number = False\n",
     "\n",
     "pipeline = Pipeline([\n",
     "        ('header_deletor', HeaderDeletor(delete_header=delete_header)),\n",
     "        ('url_deletor', UrlsDeletor(skip=skip_url)),\n",
+    "        ('number_deletor', NumberDeletor(skip=skip_number)), \n",
     "        ('vectorizer', Vectorizor(lowercase=lowercase)),\n",
     "        # ('concat_xy', XYConcatenator())\n",
     "    ])\n",
@@ -195,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +246,7 @@
        "       tol=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,9 +267,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.9137931   0.93103448  0.94782609  0.9122807   0.92982456]\n",
+      "92.6951787264\n",
+      "1.30311114737\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -254,15 +293,6 @@
       "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n",
       "/Users/geoffroy.gobert/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
       "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.9137931   0.90517241  0.90434783  0.92105263  0.89473684]\n",
-      "90.7820563403\n",
-      "0.895561529572\n"
      ]
     }
    ],
