Spam - Add option to stemm emails
So we can after evaluate if it worth it or not.

What we have in the pipeline:
 - Vectorize an email
 - Concatenate X and y resp. vectorized email and spam
 - Downcase vectorized enail
 - Delete email header
 - Delete punctation? (automatically done by CounterVectorizer)
 - Replace urls by URL
 - Replace numbers by NUMBER
- Use stemming

 Things to implement:
   - Evaluate other scikit options of CounterVectorizer?

--- a/spam-classifier/spam_classifier.ipynb
+++ b/spam-classifier/spam_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -117,8 +117,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import re, string\n",
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -153,11 +155,19 @@
    "source": [
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from nltk.stem.snowball import EnglishStemmer\n",
     "\n",
     "# Transformation 2 - vectorize\n",
     "class Vectorizor(BaseEstimator, TransformerMixin):\n",
-    "    def __init__(self, lowercase):\n",
-    "            self.vectorizor = CountVectorizer(lowercase=lowercase)\n",
+    "    def __init__(self, lowercase, skip_stemming):\n",
+    "            stemmer = EnglishStemmer()\n",
+    "            analyzer = CountVectorizer().build_analyzer()\n",
+    "            def stemmed_words(doc):\n",
+    "                return (stemmer.stem(w) for w in analyzer(doc))\n",
+    "            if skip_stemming:\n",
+    "                self.vectorizor = CountVectorizer(lowercase=lowercase)\n",
+    "            else:\n",
+    "                self.vectorizor = CountVectorizer(lowercase=lowercase, analyzer=stemmed_words)\n",
     "\n",
     "    def fit(self, X, y=None):\n",
     "        self.vectorizor.fit(X)\n",
@@ -169,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -192,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,15 +210,16 @@
     "from sklearn.pipeline import Pipeline\n",
     "\n",
     "lowercase = True\n",
-    "delete_header = True\n",
+    "delete_header = False\n",
     "skip_url = True\n",
     "skip_number = False\n",
+    "skip_stemming = False\n",
     "\n",
     "pipeline = Pipeline([\n",
     "        ('header_deletor', HeaderDeletor(delete_header=delete_header)),\n",
     "        ('url_deletor', UrlsDeletor(skip=skip_url)),\n",
     "        ('number_deletor', NumberDeletor(skip=skip_number)), \n",
-    "        ('vectorizer', Vectorizor(lowercase=lowercase)),\n",
+    "        ('vectorizer', Vectorizor(lowercase=lowercase, skip_stemming=skip_stemming)),\n",
     "        # ('concat_xy', XYConcatenator())\n",
     "    ])\n",
     "\n",
@@ -225,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +257,7 @@
        "       tol=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,18 +278,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.9137931   0.93103448  0.94782609  0.9122807   0.92982456]\n",
-      "92.6951787264\n",
-      "1.30311114737\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -294,6 +296,15 @@
       "/Users/geoffroy.gobert/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
       "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.96551724  0.98275862  0.9826087   0.94736842  0.95614035]\n",
+      "96.687866593\n",
+      "1.41238899768\n"
+     ]
     }
    ],
    "source": [
@@ -304,6 +315,15 @@
     "print(scores.mean() * 100)\n",
     "print(scores.std() * 100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
